add api codegen for updated/new endpoints
